--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "banana-troop",
+  "homepage": "https://goitstudentsworks.github.io/node_front_Bootcamp_61/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
